- Cleaning up. - Refactor. - Updating Java and Spring version.